force-app/main/default/objects/Account/fields/ProductActivationContactEmailAddresses__c.field-meta.xml
<CustomField>
    <fullName>ProductActivationContactEmailAddresses__c</fullName>
    <description>Help field for the power automate integration</description>
    <formula>TRIM(
ProductActivationContact__r.Email &amp;
IF(NOT(ISBLANK(ProductActivationContact2__r.Email)), &quot;; &quot; &amp; ProductActivationContact2__r.Email, &quot;&quot;) &amp;
IF(NOT(ISBLANK(ProductActivationContact3__r.Email)), &quot;; &quot; &amp; ProductActivationContact3__r.Email, &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Activation email addresses</label>
    <type>Text</type>
</CustomField>