force-app/main/default/objects/Account/fields/ProductActivationNote__c.field-meta.xml
<CustomField>
    <fullName>ProductActivationNote__c</fullName>
    <description>Detailed Information about exception for product activation.</description>
    <inlineHelpText>Detailed Information about exception for product activation.</inlineHelpText>
    <label>Product Activation Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>