force-app/main/default/objects/Account/fields/ProductActivationSpecifics__c.field-meta.xml
<CustomField>
    <fullName>ProductActivationSpecifics__c</fullName>
    <description>Special exceptions and requirements for product activation.</description>
    <inlineHelpText>Special exceptions and requirements for product activation.</inlineHelpText>
    <label>Product Activation Specifics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SpecificCategoryMapping</fullName>
                <label>Specific category mapping</label>
            </value>
            <value>
                <fullName>SpecificSizeMapping</fullName>
                <label>Specific size mapping</label>
            </value>
            <value>
                <fullName>SpecificColorMapping</fullName>
                <label>Specific color mapping</label>
            </value>
            <value>
                <fullName>SpecificPricing</fullName>
                <label>Specific pricing</label>
            </value>
            <value>
                <fullName>SpecificBadWords</fullName>
                <label>Specific bad words</label>
            </value>
            <value>
                <fullName>SpecificProductDataStructure</fullName>
                <label>Specific product data structure</label>
            </value>
            <value>
                <fullName>SpecificDescriptionText</fullName>
                <label>Specific description text</label>
            </value>
            <value>
                <fullName>SpecificLicensesTrademarkLaw</fullName>
                <label>Specific licenses / trademark law</label>
            </value>
            <value>
                <fullName>SpecificImageSequence</fullName>
                <label>Specific image sequence</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>