force-app/main/default/objects/Account/fields/ReferenceCommission__c.field-meta.xml
<CustomField>
    <fullName>ReferenceCommission__c</fullName>
    <label>Reference Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>