force-app/main/default/objects/Account/fields/ReturnLabelInThePackage__c.field-meta.xml
<CustomField>
    <fullName>ReturnLabelInThePackage__c</fullName>
    <label>Returnlabel in the package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>