force-app/main/default/objects/Account/fields/ReturnLabelProcess__c.field-meta.xml
<CustomField>
    <fullName>ReturnLabelProcess__c</fullName>
    <label>Return Label Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ReturnLabelProcess</valueSetName>
    </valueSet>
</CustomField>