force-app/main/default/objects/Account/fields/SalesAccountCheck__c.field-meta.xml
<CustomField>
    <fullName>SalesAccountCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales/Account Check</label>
    <type>Checkbox</type>
</CustomField>