force-app/main/default/objects/Account/fields/SalesKickOff__c.field-meta.xml
<CustomField>
    <fullName>SalesKickOff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales-Kick-Off</label>
    <type>Checkbox</type>
</CustomField>