force-app/main/default/objects/Account/fields/SalesSpecial__c.field-meta.xml
<CustomField>
    <fullName>SalesSpecial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Offer to several prospect accounts via mailing, trade fair, telephone, etc., such as reduced commission, waived connection fee, free promotion, etc.</description>
    <label>Sales-Special</label>
    <type>Checkbox</type>
</CustomField>