force-app/main/default/objects/Account/fields/Shipping_to_Poland__c.field-meta.xml
<CustomField>
    <fullName>Shipping_to_Poland__c</fullName>
    <label>Shipping to Poland</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
            <value>
                <fullName>under clarification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>