force-app/main/default/objects/Account/fields/ShippingCostDe__c.field-meta.xml
<CustomField>
    <fullName>ShippingCostDe__c</fullName>
    <label>Shipping cost DE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ShippingCosts</valueSetName>
    </valueSet>
</CustomField>