force-app/main/default/objects/Account/fields/Shopname__c.field-meta.xml
<CustomField>
    <fullName>Shopname__c</fullName>
    <label>Shopname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>