force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>InProgress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>InactiveOpportunity</fullName>
                <label>Inactive Opportunity</label>
            </value>
            <value>
                <fullName>ActiveOpportunity</fullName>
                <label>Active Opportunity</label>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>OnHold</fullName>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>