force-app/main/default/objects/Account/fields/SupplierId__c.field-meta.xml
<CustomField>
    <fullName>SupplierId__c</fullName>
    <label>Supplier ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>