force-app/main/default/objects/Account/fields/Sustainability__c.field-meta.xml
<CustomField>
    <fullName>Sustainability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sustainability</label>
    <type>Checkbox</type>
</CustomField>