force-app/main/default/objects/Account/fields/TechContact2__c.field-meta.xml
<CustomField>
    <fullName>TechContact2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Additional contact person for technical issues</description>
    <inlineHelpText>Additional contact person for technical issues</inlineHelpText>
    <label>Tech contact 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Tech contact 2)</relationshipLabel>
    <relationshipName>AccountsTechContact2</relationshipName>
    <type>Lookup</type>
</CustomField>