force-app/main/default/objects/Account/fields/TechContact3__c.field-meta.xml
<CustomField>
    <fullName>TechContact3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Additional contact person for technical issues</description>
    <inlineHelpText>Additional contact person for technical issues</inlineHelpText>
    <label>Tech contact 3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Tech contact 3)</relationshipLabel>
    <relationshipName>AccountsTechContact3</relationshipName>
    <type>Lookup</type>
</CustomField>