force-app/main/default/objects/Account/fields/TechContactEmailAddresses__c.field-meta.xml
<CustomField>
    <fullName>TechContactEmailAddresses__c</fullName>
    <description>Help field for the power automate integration</description>
    <formula>TRIM(
TechContact__r.Email  &amp;
IF(NOT(ISBLANK(TechContact2__r.Email)), &quot;; &quot; &amp; TechContact2__r.Email, &quot;&quot;) &amp;
IF(NOT(ISBLANK(TechContact3__r.Email)), &quot;; &quot; &amp; TechContact3__r.Email, &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech contact email addresses</label>
    <type>Text</type>
</CustomField>