force-app/main/default/objects/Account/fields/TechSupportManager__c.field-meta.xml
<CustomField>
    <fullName>TechSupportManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TechSupport Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsTipSupport</relationshipName>
    <type>Lookup</type>
</CustomField>