force-app/main/default/objects/Account/fields/TerminationReason__c.field-meta.xml
<CustomField>
    <fullName>TerminationReason__c</fullName>
    <label>Termination Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Insolvency</fullName>
            </value>
            <value>
                <fullName>TerminationByPartnerStrategicReasons</fullName>
                <label>Termination by Partner – Strategic Reasons</label>
            </value>
            <value>
                <fullName>TerminationByPartnerCapacityIssues</fullName>
                <label>Termination by Partner – Capacity Issues</label>
            </value>
            <value>
                <fullName>TerminationByPartnerLowSales</fullName>
                <label>Termination by Partner – Low Sales</label>
            </value>
            <value>
                <fullName>TerminationByLimangoLowSales</fullName>
                <label>Termination by Limango – Low Sales</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>