force-app/main/default/objects/Account/fields/TypeOfDistribution__c.field-meta.xml
<CustomField>
    <fullName>TypeOfDistribution__c</fullName>
    <label>Type of Distribution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypeOfDistribution</valueSetName>
    </valueSet>
</CustomField>