force-app/main/default/objects/Account/fields/UvpIndication__c.field-meta.xml
<CustomField>
    <fullName>UvpIndication__c</fullName>
    <label>UVP Indication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>