force-app/main/default/objects/Account/fields/VatIdCompany__c.field-meta.xml
<CustomField>
    <fullName>VatIdCompany__c</fullName>
    <label>VAT ID Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>