force-app/main/default/objects/Account/fields/VatIdWarehouse__c.field-meta.xml
<CustomField>
    <fullName>VatIdWarehouse__c</fullName>
    <label>VAT ID Warehouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>