force-app/main/default/objects/Account/fields/WarehouseCountry__c.field-meta.xml
<CustomField>
    <fullName>WarehouseCountry__c</fullName>
    <description>Country where the company warehouse is located, corresponding to the warehouse VAT ID.</description>
    <inlineHelpText>Country where the company warehouse is located, corresponding to the warehouse VAT ID.</inlineHelpText>
    <label>Warehouse Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MerchantCenterCountry</valueSetName>
    </valueSet>
</CustomField>