force-app/main/default/objects/Account/fields/WeeeRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>WeeeRegistrationNumber__c</fullName>
    <label>WEEE Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>