force-app/main/default/objects/Account/fields/X2mh__c.field-meta.xml
<CustomField>
    <fullName>X2mh__c</fullName>
    <label>2mh</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>