force-app/main/default/objects/Account/fields/X2mh_free_Shipping_DE__c.field-meta.xml
<CustomField>
    <fullName>X2mh_free_Shipping_DE__c</fullName>
    <label>2mh free Shipping DE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>