force-app/main/default/objects/Account/fields/X2mh_Free_Shipping_Limit_AT__c.field-meta.xml
<CustomField>
    <fullName>X2mh_Free_Shipping_Limit_AT__c</fullName>
    <label>2mh Free Shipping Limit AT</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>