force-app/main/default/objects/Account/fields/ZlkzNumber__c.field-meta.xml
<CustomField>
    <fullName>ZlkzNumber__c</fullName>
    <label>ZLKZ Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>