force-app/main/default/objects/Account/validationRules/Signed_Status_Fields_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>Signed_Status_Fields_Req</fullName>
    <active>true</active>
    <description>Validierung für Commercial Detail Felder. Sync zum Merchant Center</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;signed&quot;),
    Backend__c = &quot;Merchant Center&quot;,
    OR(
        ISPICKVAL(CommercialCountry__c, &quot;&quot;),
        ISBLANK(CommercialRegisterLocation__c),
        ISBLANK(VatIdCompany__c),
        ISBLANK(VatIdWarehouse__c),
        ISPICKVAL(WarehouseCountry__c, &quot;&quot;)
    )
)</errorConditionFormula>
    <errorMessage>Saving is only possible once the fields Commercial Country, Commercial Register Location, Commercial Register Number, VAT ID Company, VAT ID Warehouse and Warehouse Country under Commercial Details have been filled in.</errorMessage>
</ValidationRule>