force-app/main/default/objects/Account/validationRules/TerminationDate_mandatoy_MP.validationRule-meta.xml
<ValidationRule>
    <fullName>TerminationDate_mandatoy_MP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Terminated&quot;),
    OR(
        CONTAINS(TEXT(BusinessUnit__c), &quot;Marketplace&quot;),
        CONTAINS(TEXT(BusinessUnit__c), &quot;all&quot;)
    ),
    ISBLANK(Termination_Date__c),
    $Profile.Name &lt;&gt; &quot;Limango AdSales User&quot;
)</errorConditionFormula>
    <errorMessage>Bitte Termination Date eintragen.</errorMessage>
</ValidationRule>