force-app/main/default/objects/Account/validationRules/VatID_mandatory_if_BU_AdSales.validationRule-meta.xml
<ValidationRule>
    <fullName>VatID_mandatory_if_BU_AdSales</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(BusinessUnit__c, &quot;AdSales&quot;),
    ISBLANK(VatIdCompany__c)
)</errorConditionFormula>
    <errorMessage>Please fill in VAT ID Company in the additional informations.</errorMessage>
</ValidationRule>