force-app/main/default/objects/Account/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ConnectionType__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>AccountManager__c</field>
        <operation>equals</operation>
        <value>Nesrin Esen</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Live</value>
    </filters>
    <label>All</label>
</ListView>