force-app/main/default/objects/Account/listViews/X02_PM_My_In_Integration_Accounts.listView-meta.xml
<ListView>
    <fullName>X02_PM_My_In_Integration_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Status__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Commission__c</columns>
    <columns>FreeShippingAT__c</columns>
    <columns>FreeShippingDE__c</columns>
    <columns>ShippingCostAt__c</columns>
    <columns>ShippingCostDe__c</columns>
    <columns>ACCOUNT.RATING</columns>
    <columns>PartnerStatus__c</columns>
    <columns>BusinessUnit__c</columns>
    <columns>TechSupportManager__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Signed</value>
    </filters>
    <label>02_PM My Signed Accounts</label>
    <sharedTo>
        <group>Marketplace</group>
    </sharedTo>
</ListView>