force-app/main/default/objects/Account/listViews/X02_PM_My_On_Hold_Accounts.listView-meta.xml
<ListView>
    <fullName>X02_PM_My_On_Hold_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Status__c</columns>
    <columns>ACCOUNT.RATING</columns>
    <columns>Category__c</columns>
    <columns>Commission__c</columns>
    <columns>MerchantId__c</columns>
    <columns>PartnerStatus__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>OnHold,Terminated</value>
    </filters>
    <label>02_PM My On Hold /Terminated Accounts</label>
    <sharedTo>
        <group>Marketplace</group>
    </sharedTo>
</ListView>